--- a/VendingMachine/index.html
+++ b/VendingMachine/index.html
@@ -11,21 +11,47 @@
     <div class="text">
         <h1>Welcome to Vicky's Space!</h1>
     </div>
-    <div class="beijingqu"></div>
     <div class="container">
     <!--最底部操作区-->
         <div class="machinemainbody">
+            <div class="img2">
+                <img src="img/img2.png" alt="">
+            </div>
+            <div class="img3">
+                <img src="img/img3.png" alt="">
+            </div>
+            <div class="anniu">
+                <a href="https://canvascloud.ocadu.ca/"></a>
+            </div>
+            <div class="jisuanpan">
+                <img src="img/img4.png" alt="">
+            </div>
             <!--左边饮料区-->
             <div class="machinebody">
                  <!--饮料区-->
                  <div class="yinliaoqu">
                      <div class="yinliaolan">
-                         <div class="yinliaolan1"></div>
-                         <div class="yinliaolan2"></div>
+                         <div class="yinliaolan1">
+                             <div class="jiweix4">
+                             <div class="jiwei1"></div>
+                             <div class="jiwei2"></div>
+                             <div class="jiwei3"></div>
+                             <div class="jiwei4"></div>
+                            </div>
+                         </div>
+                         <div class="yinliaolan2">
+                            <div class="jiweix42">
+                                <div class="jiwei5"></div>
+                                <div class="jiwei6"></div>
+                                <div class="jiwei7"></div>
+                                <div class="jiwei8"></div>
+                               </div> 
+                         </div>
                      </div>
                  </div>
                  <!--饮料区下面装饰块-->
                  <div class="zhuangshikou">
+                     <img src="img/img1.png" alt="">
                      <div class="zhuangshikou2"></div>
                  </div>
                  <!--出饮料口-->
@@ -39,9 +65,9 @@
                      </div>
                  </div>
                  <!--出饮料口下面装饰线段-->
-                <div class="xianduan2"></div>
-                
+                <div class="xianduan2"></div> 
             </div>
+            <div class="jiqidibu"></div>
         </div>
     </div>
     
