--- a/VendingMachine/index.html
+++ b/VendingMachine/index.html
@@ -6,12 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vicky</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <div class="text">
-        <h1>Welcome to Vicky's Space!</h1>
+    <div class="container2">
+        <div class="text">
+            <span>WELCOME TO <br>VICKY'S SPACE</span>
+        </div>
+        <div class="waibukuang"></div>
+        <div class="neibukuang"></div>
+        <div class="img678">
+            <div class="img6">
+                <img src="img/img6.png" alt="">
+            </div>
+            <div class="img7">
+                <img src="img/img7.png" alt="">
+            </div>
+            <div class="img8">
+                <img src="img/img8.png" alt="">
+            </div>
+        </div>
     </div>
-    <div class="container">
+    <div class="container">  
+        <div class="img5">
+            <img src="img/img5.png" alt="">
+        </div>
     <!--最底部操作区-->
         <div class="machinemainbody">
             <div class="img2">
