--- a/VendingMachine/index.html
+++ b/VendingMachine/index.html
@@ -18,7 +18,9 @@
         <div class="neibukuang"></div>
         <div class="img678">
             <div class="img6">
+                <a href="text.html">
                 <img src="img/img6.png" alt="">
+                </a>
             </div>
             <div class="img7">
                 <img src="img/img7.png" alt="">
