--- a/VendingMachine/text.html
+++ b/VendingMachine/text.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vicky</title>
     <link rel="stylesheet" href="./css/text.css">
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Arapey&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Jost&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="container1">
@@ -29,6 +33,112 @@
             <img src="./img/img7.png" alt="">
             <img src="img/img8.png" alt="">
             <img src="img/img6.png" alt="">
+        </div>
+    </div>
+    <div class="topredmargin"></div>
+    <div class="container2">
+        <div class="img9">
+            <img src="img/img9.png" alt="">
+        </div>
+        <div class="title">
+            <span>Why Does Every Beer Look <br>So Cool Now?</span>
+        </div>
+        <div class="xuyan">
+            <p>Published on
+                <br>June 11th, 2019</p>
+        </div>
+        <div class="hengxian"></div>
+        <div class="xuyan2">
+            <p>The rise in craft brewing has spurred a beer aisle design renaissance.</p>
+        </div>
+    </div>
+    <div class="container3">
+    <div class="paragraph1">
+        <p>
+         On a recent weekend afternoon, I found myself in my neighborhood grocery store contemplating a wall of beer. This section of the store is like a candy aisle, filled with rows of brightly colored cans and illustrated boxes that look like they were plucked from a design blog.
+         <br>
+         <br>
+         Like a sugar-addled child, my eyes darted from one label to the next while I sorted through what makes the hazy IPA with the colorful, abstract drawing on the label any different than the hazy IPA with the sans-serif logo. I came to the conclusion that it really didn’t matter, and grabbed the cheaper six pack.
+         <br>
+         <br>
+         This level of beer-aisle deliberation is a relatively new phenomenon. Choosing beer used to be easy. There were the old standbys—the Budweisers, the Millers, and the occasional import like Heineken—all with classic labels that made you want to use the word “brewsky.” Today, choosing a beer can require a full-on aesthetic assessment. Even Milton Glaser has something to say about it.
+        </p>
+    </div>
+    <div class="paragraph2">
+        <p>
+            Small, independent brewing is booming, and it’s brought with it a renaissance in beer label design. To put it in perspective: Ten years ago, the United States had 1,650 registered craft breweries; today there are more than 7,300, and that number is only going to grow. This is good news for beer lovers, but bad news for indecisive drinkers who make decisions based on whatever looks cool. The problem we’re facing today, if you can really call it a problem, is that pretty much everything looks cool now.
+            <br>
+            <br>
+           Beer magazine Caña recently wrote that “beer cans are officially the new record sleeve,” and it’s right. While Big Beer is all about brand recognition and consistency, craft breweries have embraced a more experimental approach, distinguishing themselves with labels designed to catch the eye when you’re scanning the cooler.
+        </p>
+    </div>
+    <div class="paragraph3">
+        <p>
+            "DESIGN IS EVERYTHING."
+        </p>
+    </div>
+    <div class="paragraph4">
+        <p>
+            “A large percentage of beer lovers walk into a store and don’t know what they’re going to buy,” says Julia Herz, the Craft Beer program director at the Brewers Association, the national organization for craft breweries. “The pressure at retail is to stand out and get noticed.” A good label is a calling card. It’s a chance for breweries to convince you to choose their beer and not the one next to it.
+            <br>
+            <br>
+            “Design is everything,” Herz adds. “Craft brewers don’t typically have Big Beer advertising budgets. Most of them are doing grassroots marketing, and nothing is more grassroots than your packaging.”
+            <br>
+            <br>
+            When craft beer was still a small operation, breweries would often design their label in-house or ask a friend or local artist to pull something together for a release. “It was really innocent,” says Oceania Eagan, founder of Blindtiger Design, a Seattle agency that specializes in designing identities for breweries. “That innocence meant people could just hodgepodge things together. You can’t get away with that anymore.” In the last five or so years, craft brewing has reached a level of maturity where breweries have decided it’s worth the time and money to hire a design studio who can help them “professionalize” their look. And accordingly, a crop of design studios like Blindtiger whose primary, if not exclusive, focus is on beer branding have sprung up to take advantage of the growing market.
+        </p>
+    </div>
+    <div class="paragraph5">
+        <p>
+            One of those studios is Thirst Craft, an agency out of Glasgow, Scotland, that has focused on booze branding since its founding. Matt Burns, Thirst Craft’s founder and creative director, says he’s been privy to the progression of craft brewing firsthand, and he’s noticed breweries becoming more and more savvy about how to think about their branding. “All of our projects have a strategic background now,” he says. “We often look for that one simple idea that will hold the brand together. It’s the story the brewery wants to tell.” In other words, classic consumer branding has made its way to craft brewing. The days of treating the label as a blank canvas for exploration aren’t over, necessarily, but breweries now understand the appeal of having some semblance of a cohesive identity.
+            <br>
+            <br>
+            Like most consumer products, a beer label comes with its own idealized hierarchy of information. “When someone is walking down the aisle, the first thing they’ll look for is beer style,” says Isaac Arthur, a co-founder of Indianapolis studio CODO Design. Is it a lager? An IPA? A stout? That should be clear. Next they’ll look for the brewery. Tasting notes or original story follow that. Style helps, he says, but like all visual trends, what you see on the shelf is cyclical, and with many beer companies chasing the same trend, the shelves quickly start to homogenize. “Right now we’re seeing a return to illustration and bright colors,” he says. “I imagine that next year we’ll see more reductive and plain packaging. It swings like that.”
+            <br>
+            <br>
+            Arthur and his team have designed the identities for more than 50 breweries and have written a book about the art of the beer can called the Craft Beer Branding Guide, which bills itself as a “step-by-step guide to branding your brewery, telling your story and selling a helluva lot of beer.” He says the rise in elevated beer branding is a direct result of the rise in elevated beer. For a certain type of customer, beer is no longer a commodity purchase; it’s a hobby that people are willing to spend money on, and the branding should reflect that. “If you think about who the craft beer audience traditionally has been, it’s historically been younger, white males that have money to blow,” he says. “This is an expensive product. It’s a luxury even though it’s not, you know, a Rolex.”
+        </p>
+    </div>
+    <div class="paragraph6">
+        <p>
+            This realization has led many of craft beer’s old guard breweries to rethink how they approach branding. Boulevard, a brewery out of Kansas City that was started in 1989, underwent a brand refresh in 2015, a time when one or more breweries were opening every day. Competition for shelf space was intense, and the brewery, which had more than 25 beers, was planning expand beyond the Midwest at the time. In the past, the brewery had focused on branding individual beers and used its colorful street sign logo as its main identifier. “We needed to unify the system so from a distance our beer would be recognizable as Boulevard,” says Frank Norton, an in-house designer and art director at Boulevard who helped Austin studio Helms Workshop with the rebrand.
+            <br>
+            <br>
+            The story is similar to other breweries across the country who are now facing stiffer competition in their hometown markets. When KettleHouse, a craft brewery in Missoula, Montana, started making beer in the late 1990s, it hired a friend and local artist to design its self-described “down home” logo and beer can design. One of the cans featured an illustration of a man fishing on a river in a bucket hat and blue denim shirt. “Our younger staff started calling that image ‘Grandpa,’” says Suzy Rizza, a co-owner of KettleHouse. “It was not resonating with the millennials.”
+        </p>
+    </div>
+    <div class="paragraph7">
+        <p>
+            "I actually think what a beer tastes like comes down to the way the way it looks as well."
+        </p>
+    </div>
+    <div class="paragraph8">
+        <p>
+            KettleHouse decided it was time to rebrand. When they started brewing beer, they were one of the first in the state. Now there are nine breweries in Missoula alone, and another 10 on the way. The owners saved up for more than a year to plan and pay for the brand refresh by CODO, despite the protestations of some of their employees who didn’t want to fix what they considered was still a perfectly workable logo. “We decided it was time to put our big boy, and girl, pants on and polish up a little,” Rizza says. “People are inundated when they stand at the cooler now, so you do have to make your label a little bit attractive.”
+            <br>
+            <br>
+            If that all sounds obvious, that’s because it is. The surge in Instagram-worthy beer design is the natural progression of an industry that’s taking itself, and its customers, more seriously. Consumer preference never comes down to just one thing—but considered design, once a marker of ambition, is now non-negotiable in a world where packaging can help one local pilsner sell out and leave the other sitting on shelves. “I’ve always been a big believer that we drink with our eyes,” says Burns of Thirst Craft. “I actually think what a beer tastes like comes down to the way the way it looks, as well.” 
+        </p>
+    </div>
+    <div class="xuyan3">
+        <p>
+         Words by
+         Liz Stinson
+        </p>
+    </div>
+    <div class="hengxian2"></div>
+    <div class="dibu"></div>
+    </div>
+    <div class="container4">
+        <div class="jiantouleft">
+            <a href="index.html">
+              <img src="img/img10.png" alt="">
+            </a>
+        </div>
+        <div class="jiantouright">
+            <a href="">
+                <img src="img/img11.png" alt="">
+            </a>
         </div>
     </div>
 
