--- a/VendingMachine/index.html
+++ b/VendingMachine/index.html
@@ -7,6 +7,7 @@
     <title>Vicky</title>
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Jost&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -23,10 +24,14 @@
                 </a>
             </div>
             <div class="img7">
-                <img src="img/img7.png" alt="">
+                <a href="spacezong.html">
+                   <img src="img/img7.png" alt="">
+                </a>
             </div>
             <div class="img8">
+                <a href="interact.html">
                 <img src="img/img8.png" alt="">
+                </a>
             </div>
         </div>
     </div>
@@ -43,7 +48,9 @@
                 <img src="img/img3.png" alt="">
             </div>
             <div class="anniu">
-                <a href="https://canvascloud.ocadu.ca/"></a>
+                <div class="img15">
+                    <img src="img/img15.png" alt="">
+                </div>  
             </div>
             <div class="jisuanpan">
                 <img src="img/img4.png" alt="">
@@ -69,6 +76,22 @@
                                 <div class="jiwei8"></div>
                                </div> 
                          </div>
+                         <div class="yinliaolan3">
+                             <div class="yinliaox4">
+                                 <img src="img/img6.png" alt="">
+                                 <img src="img/img18.png" alt="">
+                                 <img src="img/img13.png" alt="">
+                                 <img src="img/img15.png" alt="">
+                             </div>
+                         </div>
+                         <div class="yinliaolan4">
+                            <div class="yinliaox42">
+                                <img src="img/img14.png" alt="">
+                                <img src="img/img17.png" alt="">
+                                <img src="img/img8.png" alt="">
+                                <img src="img/img7.png" alt="">
+                            </div>
+                        </div>
                      </div>
                  </div>
                  <!--饮料区下面装饰块-->
@@ -91,6 +114,9 @@
             </div>
             <div class="jiqidibu"></div>
         </div>
+    </div>
+    <div class="click">
+        <p>-CHOOSE ONE AND CLICK!-</p>
     </div>
     
 </body>
