--- a/VendingMachine/text.html
+++ b/VendingMachine/text.html
@@ -136,10 +136,20 @@
             </a>
         </div>
         <div class="jiantouright">
-            <a href="">
+            <a href="spacezong.html">
                 <img src="img/img11.png" alt="">
             </a>
         </div>
+    </div>
+    <div class="container5">
+    <div class="nav">
+        <input type="checkbox">
+        <span></span>
+        <span></span>
+        <div class="menu">
+            <li><a href="index.html">BACK TO HOMEPAGE</a></li>
+        </div>
+    </div>
     </div>
 
 </body>
