--- a/VendingMachine/spacezong.html
+++ b/VendingMachine/spacezong.html
@@ -35,13 +35,15 @@
     <div class="topredmargin"></div>
     <div class="container2">
         <div class="title">
-        My GRAPHIC DESIGN JOURNEY
+            <span>MY GRAPHIC DESIGN 1 JOURNEY</span>
         </div>
     </div>
     <div class="container3">
         <div class="img131415">
             <div class="img13">
-                <img src="img/img13.png" alt="">
+                <a href="space1.html">
+                    <img src="img/img13.png" alt="">
+                </a>
                 <div class="text13">
                     <p>
                         Project 1A
@@ -49,10 +51,24 @@
                 </div>
             </div>
             <div class="img14">
-                <img src="img/img6.png" alt=""> 
+                <a href="space2.html">
+                     <img src="img/img14.png" alt=""> 
+                </a>
+                <div class="text14">
+                    <p>
+                        Project 1B
+                    </p>
+                </div>
             </div>
             <div class="img15">
-                <img src="img/img7.png" alt="">
+                <a href="space3.html">
+                    <img src="img/img15.png" alt="">
+                </a>
+                <div class="text15">
+                    <p>
+                        Project 2
+                    </p>
+                </div>
             </div>
         </div>
         </div>
@@ -64,15 +80,24 @@
             </a>
         </div>
         <div class="jiantouright">
-            <a href="">
+            <a href="interact.html">
                 <img src="img/img11.png" alt="">
             </a>
         </div>
     </div>
-    <div class="container5">
-       
-        <div class="text14"></div>
-        <div class="text15"></div>
+    <div class="hengxian">
+        <div class="hengxian1"></div>
     </div>
+    </div>
+    <div class="container5">
+        <div class="nav">
+            <input type="checkbox">
+            <span></span>
+            <span></span>
+            <div class="menu">
+                <li><a href="index.html">BACK TO HOMEPAGE</a></li>
+            </div>
+        </div>
+        </div>
 </body>
 </html>
